Fix property names to match those of testbed data definition
